[package]
name = "neon_test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
kanal = "0.1.0-pre8"
rand = "0.8.5"
rayon = "1.7.0"
thread-priority = "0.13.1"

[dev-dependencies]
criterion = { version = "0.4", features = ["html_reports"] }

[[bench]]
name = "my_benchmark"
harness = false
